portfolio.css
:root {
    --primary-color: #1d1b1b;
    --primary-color-fade: rgba(29,27,27,0.6);
    --secondary-color: rgb(9, 160, 160);
    --white-color: #fafafa;
    --white-color-fade: rgba(250,250,250,0.4);
    /* #696868; */
}

.bg-setting{
    height: 100vh;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    display: flex;
    justify-content: center;
    align-items: center;
}

*{
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

body{
    display: flex;
    background-color: crimson;
    /* width: 100%; */
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
}
header{
    width: 100%;
    /* display: flex;
    flex-direction: column; */
}


#logo-img{
    width: 100px;
    height: 50px;
    object-fit: cover;
}
main{
    height: 100%;
    width: 100%;
}
#welcome-container{
    background-image: url(images/background.jpg);
    width: 100%;
    height: 100vh;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    display: flex;
    justify-content: center;
    align-items: center;
    padding-top: 65px;
}
#welcome-section{
    display: flex;
    /* width: 65%; */
    max-height: 90vh;
    max-width: 850px;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    background-color: var(--primary-color);
    border-radius: 20px;
    padding: 1rem;
    /* margin: 4rem auto 1rem auto; */
}
#welcome-title{
    color: #f0f0f0;
    font-size: 30px;
    font-weight: bolder;
    font-family: monospace;
}

#welcome-subtitle{
    display: inherit;
    font-size: medium;
    font-weight: lighter;
    color: var(--secondary-color);
    margin-bottom: 0.3rem;

}

nav{
    background-color: var(--primary-color);
}
.nav-link{
    font-size: medium;
    font-weight: bold;
    text-decoration: none;
    position: relative;
}
.nav-link::after {
    display:block;
    content: '';
    border-bottom: solid 3px var(--secondary-color);  
    transform: scaleX(0);
    transition: transform 250ms ease-in-out;
    /* transform-origin:100% 50% 25%; */
  }
.nav-link:hover:after { 
    transform: scaleX(1);
    transform-origin:0 25% 50%;
}


#main-skills-container{
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(80px, 1fr));
    justify-items: center;
    gap: 0.5rem;
    margin-top: 0.5rem;
    align-items: center;
    /* background-color: blue; */
    width: 60%;
}

#main-skill-item{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    /* padding: 0.5rem; */
    /* margin: 1rem; */
}
#main-skill-icon{
    /* display: inline-block; */
    margin: auto;
    width: 50px;
    height: 50px;
}
#main-skill-text{
    color: var(--secondary-color);
    opacity: 0.5;
    padding: 0.5rem;
    margin-top: 0.3rem;
    border: 2px dotted rgba(0, 128, 128, 0);
    /* border: 0px dotted teal; */
}

#main-skill-item:hover #main-skill-text{
    opacity: 1;
    border: 2px dotted rgba(0, 128, 128, 1);
}

.skills{
    /* width: 100%; */
    height: auto;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
    background-image: url(images/background2.jpg);
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    padding: 3rem 0 3rem 0;
}

.skills-container{
    /* max-width: 100%; */
    height: auto;
    /* max-width: 850px; */
    display: flex;
    flex-direction: column;
    justify-content: center;
    background-color: var(--primary-color-fade);
    border-radius: 20px;
    padding: 1rem;
    margin: 20px 20px 20px 20px;
    color: var(--white-color);
    box-shadow: 5px 5px 10px 5px var(--primary-color);
}

.row{
    /* margin-top: 20px; */
    margin-bottom: 20px;
    width: fit-content;
    padding: 0.3rem;
    /* background-color: aqua; */
    display: flex;
    flex-wrap: wrap;
}
#skill-items{
    display: flex;
    /* grid-template-columns: repeat(auto-fill, minmax(10vw, 1fr)); */
    /* background-color: yellow; */
    justify-content: left;
    flex: 1;
    flex-wrap: wrap;
    margin-left: 2rem;
}


#skill-logo{
    display: block;
    position: relative;
    width: 50px;
    height: 50px;
    opacity: 0.8;
    background-color: var(--white-color-fade);
    border-radius: 10px;
    padding: 0.15rem;
    /* background-color: red; */
    /* justify-self: end; */
    margin: 5px 10px 5px 10px;
    /* padding: .0rem; */
}

.skill-title{
    margin: 15px 0px 0px 10px;
    width: 100px;
    height: 50px;
    /* background-color: violet; */
    align-self: center;
    font-size: large;
    font-weight: bolder;
    /* padding: 1rem; */

}
#skill-logo:hover{
    opacity: 1;
    transform: scale(1.1);
}

.cyber-skill-points{
    margin-top: 5px;
    margin-left: 15px;
    /* background-color: rebeccapurple; */
}
.row h4{
    text-decoration: underline;
}
#projects{
    background-image: url(images/background3.jpg);
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
    justify-items: center;
    gap: .5rem;
    height: 100%;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    padding: 3rem 0 3rem 0;
}

#project-item{
    background-color: var(--primary-color);
    margin: 1rem auto 1rem auto;
    /* padding: 1rem; */
}
#project-item:hover .card-title{
    background-color: var(--secondary-color);
    color: var(--primary-color);
}
#project-item img{
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    width: 350px;
    height: 200px;
}

.card-title{
    color: var(--secondary-color);
    box-shadow: 0px 5px 5px 0px var(--secondary-color);
}
.card-footer{
    display: flex;
    justify-content: space-evenly;
    align-items: center;
}
#card-btn{
    color: var(--secondary-color);
    border: 1px solid var(--secondary-color);
}
#card-btn:hover{
    color: var(--white-color);
    background-color: var(--secondary-color);
}

/* #project-container{
    display: flex;
    width: 80%;
    max-height: 90vh;
    max-width: 850px;
    flex-direction: column;
    justify-content: center;
    background-color: var(--primary-color);
    border-radius: 20px;
    padding: 1rem;
    color: var(--secondary-color);
} */

#contact{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background-color: var(--primary-color);
    padding: 1rem;
}
#contact-links{
    /* /* position: relative; */
    display: flex;
    flex-direction: row;
    flex: 1;
    justify-content: space-around;
    align-items: center; 

}

#contact-title{
    color: var(--white-color);
    text-align: center;
}
.contact-item{
    position: relative;
    /* margin-top: 50px; */
    opacity: 0.6;
}
.contact-item i{
    margin: 20px 10px 20px 10px;
    text-decoration: none;
    color: var(--secondary-color);
}
.contact-item:hover{
    transform: scale(1.5);
    opacity: 1;
    top: 5px;

}
#footer{
    width: 100%;
    background-color: var(--primary-color);
    display: flex;
    flex-direction: row;
    flex: 1;
    justify-content: flex-start;
    align-items: flex-end;
    border-top: 2px solid var(--white-color);
}
#footer p{
    color: var(--white-color);
    margin: 10px;

}
hr{
    background-color: var(--white-color);
}

@media (device-height : 568px) 
   and (device-width : 320px) 
   and (-webkit-min-device-pixel-ratio: 2){
    #welcome-container{
        height: auto;
        width: 100%;
    }
    #welcome-section{
        margin-top: 65px;
        margin-bottom: 65px;
        height: auto;
    }

   }


/* mobile landscape */
@media only screen and (max-width: 850px){
    #welcome-container{
        height: auto;
        width: 100%;
    }
    #welcome-section{
        margin-top: 65px;
        margin-bottom: 65px;
        height: auto;
    }
}

 /* mobile potrait */
@media only screen and (max-width: 680px) {
    .skills-container{
        align-items: center;
    }
    .row{
        flex-direction: column;
        align-items: center;
        justify-content: center;
        width: 100%;
    }

    #welcome-contiainer{
        height: 100%;
    }
    #welcome-section{
        margin-top: 65px;
        /* height: 100%; */
    }
    #skill-logo{
        /* display: block; */
        /* position: relative; */
        /* width: 30px;
        height: 30px; */
        /* margin: auto; */
    }
    .skill-title{
        text-align: center;
        margin: 15px 0px 0px 0px;
        width: 100%;
    }

    #skill-items{
        justify-content: center;
    }

    #main-skill-icon{
        /* display: inline-block; */
        margin: auto;
        width: 30px;
        height: 30px;
    }
    #main-skill-text{
        color: var(--secondary-color);
        opacity: 0.5;
        padding: 0.2rem;
        margin-top: 0.2rem;
        border: 2px dotted rgba(0, 128, 128, 0);
        /* border: 0px dotted teal; */
    }

    .cyber-skill-points{
        margin-top: 5px;
        margin-left: 1rem;
        background-color: rebeccapurple;
        align-self: flex-start;
    }

  }

